--- a/package.json
+++ b/package.json
@@ -1,47 +1,27 @@
 {
-  "name": "firstapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
+  "name": "socket-chat-example",
+  "version": "0.0.1",
+  "description": "my first socket.io app",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "module_name": "^1.0.0",
+    "mongoose": "^5.7.0",
+    "socket.io": "^1.7.4"
   },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+  "scripts": {
+    "start": "node index.js"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/socketio/chat-example.git"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
+  "author": "monica",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/socketio/chat-example/issues"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  "homepage": "https://github.com/socketio/chat-example#readme"
 }
